Fixes #6526 Xml resource visualisations fixes and fix file field missing when returning from resource upload confirmation page and add top vertical alignment to table data visualisations

--- a/resources/assets/sass/_datatables.scss
+++ b/resources/assets/sass/_datatables.scss
@@ -12,6 +12,10 @@ table.dataTable {
     p {
         margin-bottom: 0 !important;
     }
+
+    td {
+        vertical-align: top;
+    }
 }
 
 table.dataTable thead th,
